<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarTheme" />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_below="@+id/appbar"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                card_view:cardElevation="4dp">
            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

    </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="4dp">
            <LinearLayout
                android:id="@+id/viewB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/btnSelectPosition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:clickable="true"
                        android:src="@drawable/ic_place_white_24dp"
                        android:backgroundTint="@color/md_pink_500"
                        android:elevation="2dp"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center|left">

                            <TextView
                                android:id="@+id/labelposizione"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/posizione"
                                android:layout_marginLeft="16dp"/>
                    <TextView
                        android:id="@+id/my_location_geocoding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/no_info"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/btnSelectDateHour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:clickable="true"
                        android:src="@drawable/ic_date_range_white_24dp"
                        android:backgroundTint="@color/md_pink_500"
                        android:elevation="2dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center|left">
                    <TextView
                        android:id="@+id/labeltime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dataora"
                        android:layout_gravity=""
                        android:layout_marginLeft="16dp"/>
                <TextView
                    android:id="@+id/my_location_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_info"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                        </LinearLayout>
                </LinearLayout>

                <EditText
                    android:id="@+id/editTextDidascalia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/scrivididascalia"
                    android:layout_margin="16dp"/>

                <Button
                    android:id="@+id/btnConfirm"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Conferma"
                    android:textColor="@color/md_pink_500"
                    android:layout_gravity="right"
                    android:layout_margin="16dp"/>
            </LinearLayout>





</android.support.v7.widget.CardView>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnSelectPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:layout_anchor="@id/card_view"
            app:layout_anchorGravity="bottom|right|end"
            android:src="@drawable/ic_photo_camera_white_24dp"
            android:elevation="5dp" />

    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>
